Nautilus gets laggy when using custom user-dirs
Steps to reproduce
1.Change all entries in ~/.config/user-dirs.dirs
to below snip
# This file is written by xdg-user-dirs-update
# If you want to change or add directories, just edit the line you're
# interested in. All local changes will be retained on the next run.
# Format is XDG_xxx_DIR="$HOME/yyy", where yyy is a shell-escaped
# homedir-relative path, or XDG_xxx_DIR="/yyy", where /yyy is an
# absolute path. No other format is supported.
#
XDG_DESKTOP_DIR="$HOME/desk"
XDG_DOWNLOAD_DIR="$HOME/data"
XDG_TEMPLATES_DIR="$HOME/data"
XDG_PUBLICSHARE_DIR="$HOME/data"
XDG_DOCUMENTS_DIR="$HOME/docs"
XDG_MUSIC_DIR="$HOME/media`"
XDG_PICTURES_DIR="$HOME/media"
XDG_VIDEOS_DIR="$HOME/media"
- Open
nautilus
then navigate to any path in~/
Reproducible in:
- Checked both v3.22.1-stable (CentOS 7), v3.28.1-stable(RHEL 8.0), reproducible in both version
Current behaviour
- Too laggy, takes > 10s to switch from one folder to another folder, Nautilus not response during switching time.
- Without changing
~/.config/user-dirs.dirs
, issue not happened - Change
~/.config/user-dirs.dirs
but if each entry mapped to different folders, issue not happened Ex:
# This file is written by xdg-user-dirs-update
# If you want to change or add directories, just edit the line you're
# interested in. All local changes will be retained on the next run.
# Format is XDG_xxx_DIR="$HOME/yyy", where yyy is a shell-escaped
# homedir-relative path, or XDG_xxx_DIR="/yyy", where /yyy is an
# absolute path. No other format is supported.
#
XDG_DESKTOP_DIR="$HOME/desk"
XDG_DOWNLOAD_DIR="$HOME/data"
XDG_TEMPLATES_DIR="$HOME/templates"
XDG_PUBLICSHARE_DIR="$HOME/public"
XDG_DOCUMENTS_DIR="$HOME/docs"
XDG_MUSIC_DIR="$HOME/music"
XDG_PICTURES_DIR="$HOME/pics"
XDG_VIDEOS_DIR="$HOME/videos"
Expected behavior
- No laggy when using custom folder mapping
Additional information
Try to build latest source code from gitlab, build with flatpak, issue is still existed.
log.txtEdited by Ghost User