files-view: Only refresh New Document menu if needed

Menus are updated very frequently. Each time, we read the Templates
directory tree and recreate a menu model from which we generate the
New Document menu that's shared between the background context menu
and the current location menu in the pathbar.

This is wasteful and may cause noticeable UI lag if the Templates
directory has got a lot of files and subdirectories.

We already have a file monitor in place which notifies us when the
content of the Templates directory actually changes, so we can rely
on it to know when we need to read the directory again, and, in the
remaining situations, we can use the cached menu model.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1069
Relates to https://gitlab.gnome.org/GNOME/nautilus/-/issues/1705